# nspotify-cover

./: LICENSE  Makefile  README.md  pyproject.toml
src/zanza259/ncspot_cover/: cover.py
