[project]
name = "ncspot-cover"
version = "0.1.0"
description = "Connect to ncspot IPC socket and render album covers as ASCII art with jp2a"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
tags = ["ncspot", "spotify", "ascii-art", "cli"]


[project.scripts]
ncspot-cover = "zanza259.ncspot_cover.cover:main"